--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -20,6 +20,8 @@
 		</PackageReference>
 		<PackageReference Include="FluentAssertions"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk"/>
+		<PackageReference Include="System.Net.Http"/>
+		<PackageReference Include="System.Text.RegularExpressions"/>
 		<PackageReference Include="xunit"/>
 		<PackageReference Include="xunit.analyzers">
 			<PrivateAssets>all</PrivateAssets>
